--- a/pelican-octopress-theme/templates/_includes/navigation.html
+++ b/pelican-octopress-theme/templates/_includes/navigation.html
@@ -5,14 +5,12 @@
   {% endif %}
 </ul>
 
-<!-- TODO: add search here
-<form action="{{ SITESEARCH }}" method="get">
+<form action="http://google.com/search" method="get">
   <fieldset role="search">
-    <input type="hidden" name="q" value="site:{{ SITEURL }}" />
+    <input type="hidden" name="q" value="site:astrofrog.github.io" />
     <input class="search" type="text" name="q" results="0" placeholder="Search"/>
   </fieldset>
 </form>
--->
 
 <ul class="main-navigation">
   <li><a href="/">Blog</a></li>
