--- a/pelican-octopress-theme/templates/_includes/twitter.html
+++ b/pelican-octopress-theme/templates/_includes/twitter.html
@@ -1,13 +1,5 @@
 <section>
   <h1>Latest Tweets</h1>
-  <ul id="tweets">
-    <li class="loading">Status updating...</li>
-  </ul>
-  <script type="text/javascript">
-    $.domReady(function(){
-      getTwitterFeed("astrofrog", 4, false);
-    });
-  </script>
-  <script src="/theme/js/twitter.js" type="text/javascript"> </script>
-    <a href="http://twitter.com/astrofrog" class="twitter-follow-button" data-show-count="false">Follow @astrofrog</a>
+  <a class="twitter-timeline" href="https://twitter.com/astrofrog" data-widget-id="383651531880288257">Tweets by @astrofrog</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </section>
