--- a/pelican-octopress-theme/templates/_includes/navigation.html
+++ b/pelican-octopress-theme/templates/_includes/navigation.html
@@ -1,8 +1,5 @@
 <ul class="subscription" data-subscription="rss">
-  <li><a href="{{ FEED_DOMAIN }}/{{ FEED_ATOM }}" rel="subscribe-rss">RSS</a></li>
-  {% if FEED_RSS %}
-  <li><a href="{{ FEED_DOMAIN }}/{{ FEED_RSS }}" rel="subscribe-rss">RSS</a></li>
-  {% endif %}
+  <li><a href="/rss.xml" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
 </ul>
 
 <form action="http://google.com/search" method="get">
