--- a/octopress-theme/templates/_includes/disqus_script.html
+++ b/octopress-theme/templates/_includes/disqus_script.html
@@ -2,7 +2,7 @@
 	<script type="text/javascript">
 	  var disqus_shortname = '{{ DISQUS_SITENAME }}';
       {% if article %}
-          var disqus_identifier = '/{{ article.url }}';
+          var disqus_identifier = '{{ SITEURL }}/{{ article.url }}';
           var disqus_url = '{{ SITEURL }}/{{ article.url }}';
           var disqus_title = '{{ article.title }}';
       {% endif %}
