--- a/octopress-theme/templates/_includes/sidebar.html
+++ b/octopress-theme/templates/_includes/sidebar.html
@@ -15,9 +15,13 @@
 
   <section>
   <h1>Tags</h1>
+  <ul id="tags">
+  <li class="tag">
   {% for tag, article in tags %}
     <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>{% if not loop.last %},{% endif %}
   {% endfor %}
+  </li>
+  </ul>
   </section>
 
   {% include '_includes/links.html' %}
